--- a/index.html
+++ b/index.html
@@ -1,115 +1,95 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Mario AR Sonidos</title>
-    <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar.min.js"></script>
-    <style>
-      #startOverlay {
-        position: fixed;
-        top: 0; left: 0; right: 0; bottom: 0;
-        background: rgba(0, 0, 0, 0.85);
-        z-index: 1000;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+<head>
+  <meta charset="utf-8" />
+  <title>Mario AR con modelo personalizado</title>
+  <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar.min.js"></script>
+  <style>
+    #startOverlay {
+      position: fixed; top: 0; left: 0; right: 0; bottom: 0;
+      background: rgba(0,0,0,0.85); z-index: 1000;
+      display: flex; align-items: center; justify-content: center;
+    }
+    #startButton {
+      background: red; color: white; border: none;
+      padding: 20px 40px; font-size: 24px; border-radius: 10px;
+      cursor: pointer;
+    }
+  </style>
+  <script>
+    AFRAME.registerComponent('play-sound-on-click', {
+      schema: { soundId: { type: 'string' } },
+      init: function () {
+        const el = this.el;
+        const soundEl = document.querySelector('#' + this.data.soundId);
+        el.addEventListener('click', () => soundEl.components.sound.playSound());
+        el.addEventListener('touchend', () => soundEl.components.sound.playSound());
       }
-      #startButton {
-        background: red;
-        color: white;
-        border: none;
-        padding: 20px 40px;
-        font-size: 24px;
-        border-radius: 10px;
-        cursor: pointer;
+    });
+
+    AFRAME.registerComponent('drag-rotate', {
+      init: function () {
+        this.dragging = false; this.lastX = 0;
+        const el = this.el;
+        const canvas = el.sceneEl.canvas;
+        canvas.addEventListener('touchstart', e => { this.dragging = true; this.lastX = e.touches[0].pageX; });
+        canvas.addEventListener('touchmove', e => {
+          if (!this.dragging) return;
+          const dx = e.touches[0].pageX - this.lastX;
+          this.lastX = e.touches[0].pageX;
+          const rot = el.getAttribute('rotation');
+          rot.y += dx * 0.5;
+          el.setAttribute('rotation', rot);
+        });
+        canvas.addEventListener('touchend', () => { this.dragging = false; });
       }
-    </style>
-    <script>
-      AFRAME.registerComponent('play-sound-on-click', {
-        schema: { soundId: { type: 'string' } },
-        init: function () {
-          const el = this.el;
-          const soundEl = document.querySelector('#' + this.data.soundId);
-          el.addEventListener('click', () => {
-            if (soundEl && soundEl.components.sound) soundEl.components.sound.playSound();
-          });
-          el.addEventListener('touchend', () => {
-            if (soundEl && soundEl.components.sound) soundEl.components.sound.playSound();
-          });
-        }
-      });
+    });
 
-      AFRAME.registerComponent('drag-rotate', {
-        init: function () {
-          this.dragging = false;
-          this.lastX = 0;
-          const el = this.el;
-          el.sceneEl.canvas.addEventListener('touchstart', (e) => {
-            this.dragging = true;
-            this.lastX = e.touches[0].pageX;
-          });
-          el.sceneEl.canvas.addEventListener('touchmove', (e) => {
-            if (!this.dragging) return;
-            const deltaX = e.touches[0].pageX - this.lastX;
-            this.lastX = e.touches[0].pageX;
-            const rot = el.getAttribute('rotation');
-            rot.y += deltaX * 0.5;
-            el.setAttribute('rotation', rot);
-          });
-          el.sceneEl.canvas.addEventListener('touchend', () => {
-            this.dragging = false;
-          });
-        }
-      });
-
-      function startExperience() {
-        const overlay = document.getElementById('startOverlay');
-        overlay.style.display = 'none';
-        const scene = document.querySelector('a-scene');
-        if (scene.audioListener && scene.audioListener.context.state === 'suspended') {
-          scene.audioListener.context.resume();
-        }
+    function startExperience() {
+      document.getElementById('startOverlay').style.display = 'none';
+      const scene = document.querySelector('a-scene');
+      if (scene.audioListener && scene.audioListener.context.state === 'suspended') {
+        scene.audioListener.context.resume();
       }
-    </script>
-  </head>
+    }
+  </script>
+</head>
+<body style="margin:0; overflow:hidden;">
+  <div id="startOverlay">
+    <button id="startButton" onclick="startExperience()">TOCAR PARA INICIAR</button>
+  </div>
 
-  <body style="margin:0; overflow:hidden;">
-    <div id="startOverlay">
-      <button id="startButton" onclick="startExperience()">TOCAR PARA INICIAR</button>
-    </div>
+  <a-scene embedded arjs>
+    <a-assets>
+      <!-- Reemplaza este src por tu modelo real tipo Mario -->
+      <a-asset-item id="customModel" src="https://cdn.jsdelivr.net/gh/KhronosGroup/glTF-Sample-Models/2.0/FlightHelmet/glTF/FlightHelmet.gltf"></a-asset-item>
+      <a-asset-item id="mario2" src="https://cdn.jsdelivr.net/gh/KhronosGroup/glTF-Sample-Models/2.0/Duck/glTF/Duck.gltf"></a-asset-item>
+      <a-asset-item id="mario3" src="https://cdn.jsdelivr.net/gh/KhronosGroup/glTF-Sample-Models/2.0/Avocado/glTF/Avocado.gltf"></a-asset-item>
+    </a-assets>
 
-    <a-scene embedded arjs>
-      <a-assets>
-        <a-asset-item id="mario1" src="https://cdn.jsdelivr.net/gh/KhronosGroup/glTF-Sample-Models/2.0/Avocado/glTF/Avocado.gltf"></a-asset-item>
-        <a-asset-item id="mario2" src="https://cdn.jsdelivr.net/gh/KhronosGroup/glTF-Sample-Models/2.0/Duck/glTF/Duck.gltf"></a-asset-item>
-        <a-asset-item id="mario3" src="https://cdn.jsdelivr.net/gh/KhronosGroup/glTF-Sample-Models/2.0/FlightHelmet/glTF/FlightHelmet.gltf"></a-asset-item>
-      </a-assets>
+    <a-marker preset="hiro">
+      <!-- Nueva figura S con modelo diferente -->
+      <a-entity position="-1 0 0" scale="1 1 1" rotation="0 180 0" drag-rotate play-sound-on-click="soundS">
+        <a-gltf-model src="#customModel"></a-gltf-model>
+        <a-text value="S" position="0 1.6 0" color="red" align="center" width="1.5"></a-text>
+      </a-entity>
 
-      <a-marker preset="hiro">
+      <a-entity position="0 0 0" scale="0.5 0.5 0.5" rotation="0 180 0" drag-rotate play-sound-on-click="soundD">
+        <a-gltf-model src="#mario2"></a-gltf-model>
+        <a-text value="D" position="0 1.6 0" color="blue" align="center" width="1.5"></a-text>
+      </a-entity>
 
-        <a-entity position="-1 0 0" scale="1.8 1.8 1.8" rotation="0 180 0" drag-rotate play-sound-on-click="soundId: soundS">
-          <a-gltf-model src="#mario1"></a-gltf-model>
-          <a-text value="S" position="0 1.6 0" color="red" align="center" width="1.5"></a-text>
-        </a-entity>
+      <a-entity position="1 0 0" scale="0.5 0.5 0.5" rotation="0 180 0" drag-rotate play-sound-on-click="soundJ">
+        <a-gltf-model src="#mario3"></a-gltf-model>
+        <a-text value="J" position="0 1.6 0" color="yellow" align="center" width="1.5"></a-text>
+      </a-entity>
 
-        <a-entity position="0 0 0" scale="0.5 0.5 0.5" rotation="0 180 0" drag-rotate play-sound-on-click="soundId: soundD">
-          <a-gltf-model src="#mario2"></a-gltf-model>
-          <a-text value="D" position="0 1.6 0" color="blue" align="center" width="1.5"></a-text>
-        </a-entity>
-
-        <a-entity position="1 0 0" scale="0.5 0.5 0.5" rotation="0 180 0" drag-rotate play-sound-on-click="soundId: soundJ">
-          <a-gltf-model src="#mario3"></a-gltf-model>
-          <a-text value="J" position="0 1.6 0" color="yellow" align="center" width="1.5"></a-text>
-        </a-entity>
-
-        <a-sound id="soundS" src="https://cdn.aframe.io/basic-guide/audio/boing.wav" preload="auto"></a-sound>
-        <a-sound id="soundD" src="https://cdn.aframe.io/basic-guide/audio/tick.wav" preload="auto"></a-sound>
-        <a-sound id="soundJ" src="https://cdn.aframe.io/basic-guide/audio/backgroundnoise.wav" preload="auto"></a-sound>
-
-      </a-marker>
-
-      <a-entity camera></a-entity>
-    </a-scene>
-  </body>
+      <a-sound id="soundS" src="https://cdn.aframe.io/basic-guide/audio/boing.wav" preload="auto"></a-sound>
+      <a-sound id="soundD" src="https://cdn.aframe.io/basic-guide/audio/tick.wav" preload="auto"></a-sound>
+      <a-sound id="soundJ" src="https://cdn.aframe.io/basic-guide/audio/backgroundnoise.wav" preload="auto"></a-sound>
+    </a-marker>
+    <a-entity camera></a-entity>
+  </a-scene>
+</body>
 </html>
